# saltoapis-python

./: .gitignore  BUILD.bazel  Dockerfile.build  LICENSE  Makefile  README.md  pyproject.toml  python_metadata.bzl  rules.bzl
.github/workflows/: build.yml
google/rpc/: BUILD  code_pb2.py  error_details_pb2.py  error_details_pb2.pyi  status_pb2.py
saltoapis/auth/: BUILD  interceptor.py  token_provider.py
saltoapis/longrunning/v1/: BUILD  operation_pb2.py  operation_pb2.pyi  operation_pb2_grpc.py
saltoapis/nebula/accesspoint/v1/: BUILD  access_point_pb2.py  access_point_pb2.pyi  access_point_pb2_grpc.py
saltoapis/nebula/accesspointgroup/v1/: BUILD  access_point_group_pb2.py  access_point_group_pb2.pyi  access_point_group_pb2_grpc.py
saltoapis/nebula/accessright/v1/: BUILD  access_right_pb2.py  access_right_pb2.pyi  access_right_pb2_grpc.py
saltoapis/nebula/calendar/v1/: BUILD  __init__.py  calendar_pb2.py  calendar_pb2.pyi  calendar_pb2_grpc.py
saltoapis/nebula/cardcode/v1/: __init__.py
saltoapis/nebula/controller/v1/: BUILD  controller_pb2.py  controller_pb2.pyi  (+1 more)
saltoapis/nebula/type/: BUILD  day_type_pb2.py  day_type_pb2.pyi  device_metadata_pb2.py  device_metadata_pb2.pyi  device_type_pb2.py  device_type_pb2.pyi  opening_mode_pb2.py  opening_mode_pb2.pyi  schedule_pb2.py  schedule_pb2.pyi  technology_pb2.py  technology_pb2.pyi
saltoapis/type/: BUILD  color_pb2.py  color_pb2.pyi  date_pb2.py  day_of_week_pb2.py  interval_pb2.py  time_of_day_pb2.py
scripts/: gen-files.sh
scripts/pyproject/: BUILD  pyproject.bzl  pyproject.tmpl.toml
(+73 files in other folders)
